--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,14 @@
     <artifactId>business</artifactId>
     <description>业务中心</description>
     <packaging>pom</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>3.4.0</version>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
     <modules>
     </modules>
 </project>
